@startuml server-network
title Server — Network: VirtualClient, Socket & RMI transports (org.adsl.server.network)

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
hide empty members

package "server.network" {

  abstract class VirtualClient {
    -serverController: ServerController
    -clientUsername: String
    -gameId: Integer
    -isConnected: boolean
    -lastPing: long <<volatile>>
    +VirtualClient(serverController: ServerController)
    +processRequest(req: ClientRequest): void
    +handleDisconnection(): void
    +handleConnection(): void
    +sendLoginNeededResponse(): void
    +updateHome(activeGames: List<Integer>): void
    +updateHome(activeGames: List<Integer>, message: String): void
    +updateHome(activeGames, gamePlayers, gameCapacity): void
    +updateHome(activeGames, gamePlayers, gameCapacity, message: String): void
    +updateLobby(gameId: int, players: List<String>, numPlayersAllowed: int): void
    +updateLobby(gameId, players, numPlayersAllowed, message: String): void
    +updateTotemAvailable(totemAvailable: List<Totem>, message: String): void
    +updateGame(game: Game): void
    +updateGame(game: Game, message: String): void
    +notifyError(message: String): void
    +notifyEventTriggered(eventTitle: String, logMessage: String): void
    +notifyEndGame(id: int, results: List<MatchResult>, records: List<DBRecord>): void
    +notifyEndGame(id, results, records, message: String): void
    +sendErrorMessage(error: String): void
    +sendPing(): void
    {abstract} +sendResponse(response: ServerResponse): void
    {abstract} +closeConnection(): void
    +getClientUsername(): Optional<String>
    +getGameId(): Optional<Integer>
    +getLastPing(): long
    +isConnected(): boolean
    +setGameId(gameId: Integer): void
    +setClientUsername(clientUsername: String): void
    +setConnected(connected: boolean): void
    +updateLastPing(): void
  }

  interface HomeObserver {
    +updateHome(activeGames: List<Integer>): void
    +updateHome(activeGames: List<Integer>, message: String): void
    +updateHome(activeGames, gamePlayers, gameCapacity): void
    +updateHome(activeGames, gamePlayers, gameCapacity, message): void
  }
}

package "server.network.socket" {

  class SocketServer <<Runnable>> {
    -serverController: ServerController
    -threadPool: ExecutorService
    -active: boolean
    -port: int
    -serverSocket: ServerSocket
    +SocketServer(threadPool: ExecutorService, port: int)
    +run(): void
    +shutdown(): void
    +setServerController(serverController: ServerController): void
  }

  class SocketClientHandler <<Runnable>> {
    -socket: Socket
    -in: BufferedReader
    -out: PrintWriter
    +SocketClientHandler(socket: Socket, serverController: ServerController)
    +run(): void
    +closeConnection(): void
    +sendResponse(response: ServerResponse): void
  }
}

package "server.network.rmi" {

  class RemoteServerServiceImpl <<UnicastRemoteObject>> {
    -serverController: ServerController
    -clients: Map<RemoteClientStub, RMIClientHandler>
    -threadPool: ExecutorService
    +RemoteServerServiceImpl()
    +connect(clientCallback: RemoteClientStub): void
    +sendRequest(request: ClientRequest, clientStub: RemoteClientStub): void
    +disconnect(clientStub: RemoteClientStub): void
    +remove(clientStub: RemoteClientStub): void
    +setServerController(serverController: ServerController): void
  }

  class RMIClientHandler {
    -clientStub: RemoteClientStub
    -serverService: RemoteServerServiceImpl
    +RMIClientHandler(serverController, clientStub, serverService)
    +sendResponse(response: ServerResponse): void
    +closeConnection(): void
  }
}

VirtualClient ..|> "server.model.GameObserver"
VirtualClient ..|> HomeObserver
VirtualClient ..|> "server.model.EndGameObserver"

SocketClientHandler -up-|> VirtualClient
RMIClientHandler -up-|> VirtualClient

RemoteServerServiceImpl ..|> "shared.network.remote.RemoteServerService"
RMIClientHandler --> "1" "shared.network.remote.RemoteClientStub" : "callback"
RemoteServerServiceImpl o-- "*" RMIClientHandler : clients

SocketServer --> "1" "server.controller.ServerController"
RemoteServerServiceImpl --> "1" "server.controller.ServerController"
VirtualClient --> "1" "server.controller.ServerController"

SocketClientHandler ..> "shared.network.JsonMessageHandler"

note bottom of VirtualClient
  Bridges model push notifications
  → typed ServerResponse → wire.
  Subclasses implement sendResponse
  per transport. lastPing read by
  ServerController.startTimeoutChecker.
end note

note bottom of RemoteServerServiceImpl
  Bound in RMI registry under "GameServer".
  Each RMI call submitted to a cached thread pool
  so RMI worker threads don't block game logic.
  Ordering preserved per stub, not cross-client.
end note

@enduml
